ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/ResponsibleLending__c.object-meta.xml
<CustomObject>
    <label>Responsible Lending</label>
    <nameField>
        <label>Responsible Lending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responsible Lending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>