ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/fields/DescriptionOfChange__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfChange__c</fullName>
    <description
  >Free text for describing the change. Required if Responsible Lending is used.</description>
    <label>Description Of Change</label>
    <length>250</length>
    <type>Text</type>
</CustomField>