ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/fields/FLEXId__c.field-meta.xml
<CustomField>
    <fullName>FLEXId__c</fullName>
    <description
  >FLEX Id - externally generated Id for the FLEX system</description>
    <externalId>true</externalId>
    <label>FLEXId</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>