ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/fields/MitigationStrategy__c.field-meta.xml
<CustomField>
    <fullName>MitigationStrategy__c</fullName>
    <description
  >Enumerated string for how the risk can be mitigated. Required if Responsible Lending is used.</description>
    <label>MitigationStrategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circumstances already reflected</fullName>
            </value>
            <value>
                <fullName>Reducing Expenditure</fullName>
            </value>
            <value>
                <fullName>Sale of Assets</fullName>
            </value>
            <value>
                <fullName>Secure additional Income</fullName>
            </value>
            <value>
                <fullName>Use of Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>