ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Residential Loan Application that this Responsible Lending record applies to</description>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Responsible Lending</relationshipLabel>
    <relationshipName>Responsible_Lending</relationshipName>
    <type>Lookup</type>
</CustomField>