ctm-sf-homeloan-app/main/default/objects/ResponsibleLending__c/fields/TypeOfChange__c.field-meta.xml
<CustomField>
    <fullName>TypeOfChange__c</fullName>
    <description
  >Enumerated string categorizing the change. Required if Responsible Lending is used.</description>
    <label>Type Of Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anticipated Large Expenditure</fullName>
            </value>
            <value>
                <fullName>Permanent Decrease in Income</fullName>
            </value>
            <value>
                <fullName>Temporary Decrease in Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>